--- a/012_/static/testj2.html
+++ b/012_/static/testj2.html
@@ -17,5 +17,13 @@
       </li>
       {% endfor %}
     </ul>
+
+    <h2 id="data-title"></h2>
+    <div id="data">
+      <pre></pre>
+    </div>
+
+    <script src="static/libs/d3.min.js"></script>
+    <script src="js/script.js"></script>
   </body>
 </html>
