--- a/014_/index.html
+++ b/014_/index.html
@@ -7,7 +7,79 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <!-- <div class="main">
+      <h1 class="title">The Nobel Prize</h1>
+      <h2>A few exploratory nuggets</h2>
+
+      <div class="intro">
+        <p>
+          Some nuggets of data mined from a dataset fo Nobel prize winners
+          (2023).
+        </p>
+      </div>
+
+      <div class="conatiner" id="by-country-container">
+        <div class="info-box">
+          <p>
+            These two charts compare Nobel prize winners by country. The
+            absolute numbers are compared to the per-capita measure which takes
+            into account the population size of the respective countries.
+          </p>
+          <p>
+            Low winning outliers with less than two prizes are removed from the
+            relative set.
+          </p>
+          <p>
+            While the absolute prize tally shows the expected dominance of the
+            United States and historically influential countries, by adjusting
+            for population size we see a very different, arguably fairer
+            selection of achievements. Scandinavian countries do very well, as
+            does Switzerland, a favorite of Nobel prize winning emigres. One
+            caveat is that Sweden, winner by a relative metric, hosts the
+            prize.
+          </p>
+        </div>
+
+        <div class="chart-wraper" id="by-country">
+          <div class="chart">
+            <img src="images/country_absolute_prize_numbers.png" alt="" />
+          </div>
+
+          <div class="chart">
+            <img src="images/country_relative_prize_numbers.png" alt="" />
+          </div>
+        </div>
+      </div>
+    </div> -->
+
+    <div class="main">
+      <h1 class="title">The Nobel Prize</h1>
+      <h2>A few exploratory nuggets</h2>
+      <div class="intro">
+        <p>
+          Some nuggets of data mined from a dataset of Nobel prize winners
+          (2016).
+        </p>
+      </div>
+      <div class="container" id="by-country-container">
+        <div class="info-box">
+          <p>
+            These two charts compare Nobel prize winners by country. [...] that
+            Sweden, winner by a relative metric, hosts the prize.
+          </p>
+        </div>
+        <div class="chart-wrapper" id="by-country">
+          <div class="chart">
+            <img src="images/country_absolute_prize_numbers.png" alt="" />
+          </div>
+          <div class="chart">
+            <img src="images/country_relative_prize_numbers.png" alt="" />
+          </div>
+        </div>
+      </div>
+    </div>
     <div class="viz"></div>
+
     <script src="static/libs/d3.min.js"></script>
     <script src="script.js"></script>
   </body>
