--- a/014_/index.html
+++ b/014_/index.html
@@ -51,9 +51,37 @@
       </div>
     </div>
 
-    <div class="viz"></div>
+    <div class="main">
+      <h1 class="title">The nobel Prize</h1>
+      <h2>From notebook to the web with Plotly</h2>
 
+      <div class="intro">
+        <p>
+          Some nuggets of data mined from a dataset of Nobel prize winners
+          (2024)
+        </p>
+      </div>
+
+      <div class="container" id="by-country-container">
+        <p>
+          This chart shows the cumulative Novel prize wins by region, taking
+          the two or three highest winning countires from each. Note the huge
+          increase in US prizes after the second World War and the point in the
+          mid eighties when the US prize tally passed that of the old world,
+          European nations.
+        </p>
+
+        <div
+          id="9ab37414-ca16-45c1-bdde-4e2a7a34a14d"
+          class="plotly-graph-div"
+          style="height: 100%; width: 100%"
+        ></div>
+      </div>
+    </div>
+
+    <script src="https://cdn.plot.ly/plotly-2.12.1.min.js"></script>
     <script src="static/libs/d3.min.js"></script>
     <script src="script.js"></script>
+    <div class="viz"></div>
   </body>
 </html>
