making chart with js

--- a/014_/index.html
+++ b/014_/index.html
@@ -61,21 +61,37 @@
           (2024)
         </p>
       </div>
-
       <div class="container" id="by-country-container">
-        <p>
-          This chart shows the cumulative Novel prize wins by region, taking
-          the two or three highest winning countires from each. Note the huge
-          increase in US prizes after the second World War and the point in the
-          mid eighties when the US prize tally passed that of the old world,
-          European nations.
-        </p>
+        <div class="info-box">
+          <p>
+            This chart shows the cumulative Novel prize wins by region, taking
+            the two or three highest winning countires from each. Note the huge
+            increase in US prizes after the second World War and the point in
+            the mid eighties when the US prize tally passed that of the old
+            world, European nations.
+          </p>
+        </div>
 
-        <div
-          id="9ab37414-ca16-45c1-bdde-4e2a7a34a14d"
-          class="plotly-graph-div"
-          style="height: 100%; width: 100%"
-        ></div>
+        <div class="chart-wrapper" id="by-country">
+          <div
+            id="9ab37414-ca16-45c1-bdde-4e2a7a34a14d"
+            class="plotly-graph-div"
+            style="height: 100%; width: 100%"
+          ></div>
+        </div>
+      </div>
+    </div>
+
+    <div class="main">
+      <div class="tilte">The Nobel Prize</div>
+      <div class="intro">
+        <p>
+          Some nuggets of data mined from a dataset of Nobel prize winners
+          (2024)
+        </p>
+      </div>
+      <div class="chart-wrapper">
+        <div class="chart" id="award_age"></div>
       </div>
     </div>
 
