add chart using d3

--- a/014_/index.html
+++ b/014_/index.html
@@ -83,7 +83,7 @@
     </div>
 
     <div class="main">
-      <div class="tilte">The Nobel Prize</div>
+      <h1 class="title">The Nobel Prize</h1>
       <div class="intro">
         <p>
           Some nuggets of data mined from a dataset of Nobel prize winners
@@ -92,6 +92,35 @@
       </div>
       <div class="chart-wrapper">
         <div class="chart" id="award_age"></div>
+      </div>
+    </div>
+
+    <div class="main">
+      <h1 class="title">The Nobel Prize</h1>
+      <h2>From notebook to the web with Plotly</h2>
+
+      <div class="intro">
+        <p>
+          Some nuggets of data mined from a dataset of Nobel prize winners
+          (2024)
+        </p>
+      </div>
+      <div class="container" id="by-country-container">
+        <div class="info-box">
+          <p>
+            This chart shows the large discrepancy between total male and
+            female Nobel prize-winners by prize category.
+          </p>
+          <p>
+            Not all categories are equally unequal, with Economics being almost
+            totaly a male affair while Literature and Peace are considerably
+            closser. Within the sciences females fare better in Physioloogy or
+            Medicine thatn in Physics or Chemistry.
+          </p>
+        </div>
+        <div class="chart-wrapper">
+          <div class="chart" id="gender-category"></div>
+        </div>
       </div>
     </div>
 
