--- a/014_/index.html
+++ b/014_/index.html
@@ -124,6 +124,38 @@
       </div>
     </div>
 
+    <div class="main">
+      <h1 class="title">The Nobel Prize</h1>
+      <h2>From notebook to the web with Plotly</h2>
+
+      <div class="intro">
+        <p>
+          Some nuggets of data mined from a dataset of Nobel prize winners
+          (2024)
+        </p>
+      </div>
+      <div class="container" id="by-country-container">
+        <div class="info-box">
+          <p>
+            These violin plots show the distribution of award ages for gender and catefory groups. You can use the group selectror to choose which gets charted.
+          </p>
+          <p>
+            Note that women tend to be awarded prizes earlier thatn men (peaks at 55 vs 62). Prizes for science tend to be awarded earlier thatn those for economics, literature or peace.
+          </p>
+        </div>
+
+      <div class="chart-wrapper">
+        <div class="chart" id="violin-group"></div>
+      </div>
+
+      <div id="chart-controls">
+        <div id="nobel-group-select-holder">
+          <label for="nobel-group">Group:</label>
+          <select name="nobel-group" id="nobel-group"></select>
+        </div>
+      </div>
+    </div>
+
     <script src="https://cdn.plot.ly/plotly-2.12.1.min.js"></script>
     <script src="static/libs/d3.min.js"></script>
     <script src="script.js"></script>
