fix html and started css

--- a/016_/index.html
+++ b/016_/index.html
@@ -29,7 +29,7 @@
       </div>
 
       <!-- place holder fo the visula componets -->
-      <div class="nbviz">
+      <div id="nbviz">
         <!-- MENU START -->
         <div id="nobel-menu">
           <div id="cat-select">
@@ -65,7 +65,7 @@
         </div>
         <!-- MENU END -->
         <!-- NOBEL-VIZ START -->
-        <div id="char-holder" class="_dev">
+        <div id="chart-holder" class="_dev">
           <!-- TIME LINE OF PRIZES -->
           <div id="nobel-time"></div>
           <!-- MAP GRAPH -->
@@ -98,16 +98,18 @@
                 <span name="category"></span>
               </div>
               <div class="property">
-                <div class="label">Category</div>
+                <div class="label">Year</div>
                 <span name="year"></span>
               </div>
               <div class="property">
-                <div class="label">Category</div>
+                <div class="label">Country</div>
                 <span name="country"></span>
               </div>
             </div>
             <div id="biobox"></div>
-            <div id="readmore"><a href="#">Read more at Wikipedia</a></div>
+            <div id="readmore">
+              <a href="#">Read more at Wikipedia</a>
+            </div>
           </div>
           <!-- NOBEL BAR CHART -->
           <div id="nobel-bar"></div>
