--- a/016_/index.html
+++ b/016_/index.html
@@ -117,8 +117,11 @@
         <!-- END OF NOBEL-VIZ  -->
       </div>
     </div>
-
+    <!-- THIRD-PARTY JAVASCRIPT LIBRARIES, MAINLY D3 BASED -->
     <script src="static/libs/d3.min.js"></script>
-    <script src="static/js/nbviz_main.js"></script>
+    <script src="static/libs/topojson.min.js"></script>
+    <script src="static/libs/crossfilter.min.js"></script>
+    <!-- JAVASCRIPT FOR OUT NOBEL ELEMENTS -->
+    <script type="module" src="static/js/nbviz_main.mjs"></script>
   </body>
 </html>
