finish map tool tip

--- a/016_/index.html
+++ b/016_/index.html
@@ -69,7 +69,12 @@
           <!-- TIME LINE OF PRIZES -->
           <div id="nobel-time"></div>
           <!-- MAP GRAPH -->
-          <div id="nobel-map"></div>
+          <div id="nobel-map">
+            <div id="map-tooltip">
+              <h2></h2>
+              <p></p>
+            </div>
+          </div>
           <div id="map-tooltip">
             <h2></h2>
             <p></p>
