add tooltip for the time chart

--- a/016_/index.html
+++ b/016_/index.html
@@ -67,7 +67,12 @@
         <!-- NOBEL-VIZ START -->
         <div id="chart-holder" class="_dev">
           <!-- TIME LINE OF PRIZES -->
-          <div id="nobel-time"></div>
+          <div id="nobel-time">
+            <div id="time-tooltip">
+              <h2></h2>
+              <p></p>
+            </div>
+          </div>
           <!-- MAP GRAPH -->
           <div id="nobel-map">
             <div id="map-tooltip">
@@ -117,7 +122,12 @@
             </div>
           </div>
           <!-- NOBEL BAR CHART -->
-          <div id="nobel-bar"></div>
+          <div id="nobel-bar">
+            <div id="bar-tooltip">
+              <h2></h2>
+              <p></p>
+            </div>
+          </div>
         </div>
         <!-- END OF NOBEL-VIZ  -->
       </div>
