add winners bio box

--- a/016_/index.html
+++ b/016_/index.html
@@ -71,6 +71,7 @@
             <div id="time-tooltip">
               <h2></h2>
               <p></p>
+              <p class="name"></p>
             </div>
           </div>
           <!-- MAP GRAPH -->
