--- a/016_/index.html
+++ b/016_/index.html
@@ -131,9 +131,11 @@
           </div>
         </div>
         <!-- END OF NOBEL-VIZ  -->
+        <div id="nobel-birth-month">thing bob</div>
       </div>
     </div>
     <!-- THIRD-PARTY JAVASCRIPT LIBRARIES, MAINLY D3 BASED -->
+
     <script src="static/libs/d3.min.js"></script>
     <script src="static/libs/topojson.min.js"></script>
     <script src="static/libs/crossfilter.min.js"></script>
