fix month bar chart

--- a/016_/index.html
+++ b/016_/index.html
@@ -130,7 +130,7 @@
             </div>
           </div>
         </div>
-        <div id="nobel-birth-month">thing bob</div>
+        <div id="nobel-birth-month"></div>
         <!-- END OF NOBEL-VIZ  -->
       </div>
     </div>
