add tooltip to bar chart and month chart

--- a/016_/index.html
+++ b/016_/index.html
@@ -130,7 +130,13 @@
             </div>
           </div>
         </div>
-        <div id="nobel-birth-month"></div>
+        <div id="nobel-birth-month">
+          <div id="month-tooltip">
+            <h2></h2>
+            <p></p>
+            <p class="name"></p>
+          </div>
+        </div>
         <!-- END OF NOBEL-VIZ  -->
       </div>
     </div>
