add filter category, gender and country

--- a/016_/index.html
+++ b/016_/index.html
@@ -11,21 +11,11 @@
     <div id="chart">
       <div id="title">Visualizing the Nobel Prize</div>
       <div id="info">
-        This is a companion piece to the book
-        <a href="http://"> Data visualization with Python and JavaScript</a>,
-        in which its construction is detailed. The data used was scraped
-        Wikipedia using the
-        <a
-          href="https://en.wikipedia.org/wiki/List_of_Nobel_laureates_by_country"
-        >
-          list of winners by country</a
-        >
-        as a starting point. The accompanying GitHub repo is
         <a
           href="https://github.com/FilipeOrfao/data_visualization_with_python_and_javascript"
         >
-          here</a
-        >.
+          Repo for the code</a
+        >
       </div>
 
       <!-- place holder fo the visula componets -->
